# DCH

./: .coverage  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  environment.yml  notes.md  pyproject.toml  requirements.txt
artifacts/: CHECKSUMS-0.9.0.txt  RELEASE_DRAFT_v0.9.0.md  api_surface_matrix.json  coverage_summary.json  todos_findings.json
baselines/: __init__.py  bindsnet_stdp.py  norse_sg.py
benchmarks/: benchmark_plasticity_beta.py  benchmark_traversal.py  benchmark_traversal_complexity.py
configs/: cv.yaml  fsm.yaml  hyperparams_sweep.yaml  micro.yaml  pipeline.yaml  scaffolding.yaml
dch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dch_core/: __init__.py  beta_utils.py  crc.py  dhg.py  dpo.py  dpo_analysis.py  events.py  hypergraph_mem.py  interfaces.py  manifold.py  plasticity.py  plasticity_beta.py  traversal.py
dch_data/: encoders.py  nmnist.py  transforms.py
dch_pipeline/: __init__.py  crc_logger.py  determinism.py  eat_logger.py  evaluation.py  logging_utils.py  metrics.py  pipeline.py  replay.py  seeding.py  stats.py
dch_snn/: interface.py  norse_models.py
docs/: API_REFERENCE.md  AlgorithmSpecs.md  Analysis_DCH_vs_DCGH_Parity.md  BASELINES.md  CODE_OF_CONDUCT.md  DCH_TechSpec_Outline.md  DCH_TechSpec_v0.1.md  DiagramsIndex.md  DiagramsReport.md  FrameworkDecision.md  HardwareAppendix.md  LinksFixReport.md  Makefile  ModuleResponsibilityMatrix.md  REPRODUCIBILITY.md  RESULTS.md  ROADMAP.md  ReleaseNotes.md  Review_v0.2.md  SUPPLEMENTARY.md  USAGE.md  conf.py  index.rst  references.bib
notebooks/: Analysis_DVS_Gesture.ipynb  Analysis_NMNIST.ipynb  GettingStarted.ipynb
scripts/: __init__.py  build_master_md.py  check_diagrams.py  check_links.py  fix_links.py  make_results_bundle.py  make_splits.py  run_ablation_suite.py  run_baselines_experiment.py  run_dataset_experiment.py  run_experiment.py  run_gate_review.py  run_quick_experiment.py  run_stats_report.py  with_docker.sh
tests/: conftest.py  synthetic_micro.py  test_ablation_suite.py  test_abstraction_ho_edges.py  test_abstraction_integration.py  test_baselines_cli.py  test_benchmark_traversal_complexity.py  test_beta_conjugacy_edge_cases.py  test_beta_uncertainty.py  test_crc_extractor.py  test_data_nmnist.py  test_dhg_tc_knn.py  test_dpo_confluence.py  test_dpo_rules.py  test_dual_proof_gating.py  test_eat_logger.py  test_encoders.py  test_evaluation_protocol_smoke.py  test_fsm_minimal.py  test_fsm_streaming.py  test_gate_review.py  (+18 more)
(+150 files in other folders)
